k8s-demo-yaml/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: nsx-demo
        labels:
                app: nsx-demo
spec:
        selector:
          matchLabels:
            app: nsx-demo
        replicas: 4
        template:
                metadata:
                        labels:
                                app: nsx-demo
                                secgroup: app-tier
                spec:
                        #securityContext:
                        #       runAsUser : 1000
                        #       runAsGroup: 0
                        containers:
                                - name: nsx-demo
                                  image: yfauser/nsx-demo
                                  imagePullPolicy: IfNotPresent
                                  ports:
                                          - containerPort: 80
