k8s-demo-yaml/03-mgmt.yaml
apiVersion: v1
kind: Pod
metadata:
        name: mgmtpod
spec:
  containers:
  - name: ubuntu
    image: tutum/ubuntu:trusty
    imagePullPolicy: IfNotPresent
    ports:
    - name: ssh
      containerPort: 22
