k8s-demo-yaml/02-service_lb.yaml
apiVersion: v1
kind: Service
metadata:
        name: nsx-demo
        labels:
                app: nsx-demo
spec:
        ports:
                - port: 80
        selector:
                app: nsx-demo
        type: LoadBalancer
