k8s-demo-yaml/04-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        name: nsx-demo
spec:
        rules:
        - host: nsx-demo.corp.local
          http:
            paths:
            - path: /
              backend:
                serviceName: nsx-demo
                servicePort: 80
