k8s-demo-yaml/05-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
        name: nsx-demo-app-policy
spec:
        podSelector:
                matchLabels:
                        app: nsx-demo
        ingress:
        - from:
          - ipBlock:
                  # IP of LoadBalancer T1/T0 Router Uplink port. 
                  # Find in NSX MGR
                  # also sent as NCP Annotation for ingress
                  # kubectl describe ingress nsx-demo -n[yournamespace]
                  cidr: 100.64.224.3/31 
          ports:
          - protocol: TCP
            port: 80

        - from:
          - ipBlock:
                  cidr: 192.168.4.1/24
          ports:
          - protocol: TCP
            port: 1234
